# Kalshi-Checker

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
config/: settings.example.yaml
docs/: architecture.md  best-usage.md  cli.md  schema.md  scoring.md  threat-model.md
migrations/: env.py
migrations/versions/: 20260315_0001_initial_schema.py  20260316_0002_add_adjusted_score_to_feature_snapshots.py  20260317_0003_add_market_price_snapshots.py  20260317_0004_add_true_timing_fields_to_feature_snapshots.py
scripts/: demo_seed.sh  export_reports.sh
src/polymarket_anomaly_tracker/: __init__.py  config.py  logging_config.py  main.py
src/polymarket_anomaly_tracker/cli/: __init__.py  demo_cmd.py  flag_cmd.py  ingest_cmd.py  init_cmd.py  report_cmd.py  score_cmd.py  watch_cmd.py
src/polymarket_anomaly_tracker/clients/: __init__.py  dto.py  exceptions.py  polymarket_rest.py
src/polymarket_anomaly_tracker/db/: base.py  enums.py  init_db.py  models.py  repositories.py  session.py
src/polymarket_anomaly_tracker/demo/: __init__.py  workflow.py
src/polymarket_anomaly_tracker/features/: base.py  consistency.py  conviction.py  dataset.py  (+3 more)
tests/: test_cli.py  test_config.py  test_db.py  test_demo.py  test_docs.py  test_features.py  test_flagging.py  test_ingest.py  test_reporting.py  test_rest_client.py  test_scoring.py  test_tracking.py
tests/fixtures/: activity.json  closed_positions.json  current_positions.json  leaderboard.json  market.json  market_price_snapshots.json  markets.json  profile.json  trades.json
(+22 files in other folders)
