[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "polymarket-anomaly-tracker"
version = "0.1.0"
description = "Local-only CLI for analyzing public Polymarket data and tracking anomalous wallets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "rich>=14.0.0,<15.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "typer>=0.16.0,<1.0.0",
]

[project.scripts]
pmat = "polymarket_anomaly_tracker.main:app"

[dependency-groups]
dev = [
    "mypy>=1.15.0,<2.0.0",
    "pre-commit>=4.2.0,<5.0.0",
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.11.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_anomaly_tracker"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
